[gd_scene load_steps=10 format=2]

[ext_resource path="res://Battle/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Battle/UI/SubMenu.gd" type="Script" id=2]
[ext_resource path="res://Battle/UI/AbilityMenu.gd" type="Script" id=3]
[ext_resource path="res://Battle/UI/Textbox.gd" type="Script" id=4]
[ext_resource path="res://Battle/Battle.gd" type="Script" id=5]
[ext_resource path="res://Battle/UI/AbilityList.gd" type="Script" id=6]
[ext_resource path="res://Sprites/UI/TextboxBorder.png" type="Texture" id=7]
[ext_resource path="res://Battle/TargetList.gd" type="Script" id=8]
[ext_resource path="res://Battle/UI/Target.tscn" type="PackedScene" id=9]

[node name="Battle" type="Node"]
script = ExtResource( 5 )

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="Textbox" type="NinePatchRect" parent="UI"]
margin_right = 248.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
texture = ExtResource( 7 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource( 4 )

[node name="TextboxLabel" type="Label" parent="UI/Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0

[node name="MarginContainer" type="MarginContainer" parent="UI"]
margin_top = 20.0
margin_right = 248.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="AbilityMenu" type="HBoxContainer" parent="UI"]
margin_top = 160.0
margin_right = 248.0
margin_bottom = 232.0
script = ExtResource( 3 )

[node name="AbilityList" type="NinePatchRect" parent="UI/AbilityMenu"]
margin_right = 64.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 72 )
texture = ExtResource( 7 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/AbilityMenu/AbilityList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0

[node name="SubMenu" type="NinePatchRect" parent="UI/AbilityMenu"]
margin_left = 68.0
margin_right = 248.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture = ExtResource( 7 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource( 2 )

[node name="TargetList" type="VBoxContainer" parent="UI/AbilityMenu/SubMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 8 )

[node name="Target" parent="UI/AbilityMenu/SubMenu/TargetList" instance=ExtResource( 9 )]
